--- a/config/Makefile.standalone.in
+++ b/config/Makefile.standalone.in
@@ -7,7 +7,6 @@ ABSBASEDIR      := @ABSBASEDIR@
 ENABLE_FFLITE    := @ENABLE_FFLITE@
 ENABLE_LOOPTOOLS := @ENABLE_LOOPTOOLS@
 ENABLE_COLLIER   := @ENABLE_COLLIER@
-ENABLE_THREADS   := @ENABLE_THREADS@
 
 MODULE_LIBEXT   := @MODULE_LIBEXT@
 
@@ -46,7 +45,6 @@ GSLLIBS         := @GSLLIBS@
 GSLFLAGS        := @GSLFLAGS@
 LOOPFUNCFLAGS   := @LOOPFUNCFLAGS@
 LOOPFUNCLIBS    := @LOOPFUNCLIBS@
-THREADLIBS      := @THREADLIBS@
 
 STANDALONE_SRC := \
 		standalone.cpp
@@ -95,7 +93,7 @@ $(STANDALONE_DEP) $(STANDALONE_OBJ): CPPFLAGS += $(LOOPFUNCFLAGS)
 endif
 
 $(STANDALONE_EXE): $(STANDALONE_OBJ) $(LIBMODEL) $(LIBSMHO) $(LIBMSSMHO) $(LIBFLEXI) $(filter-out -%,$(LOOPFUNCLIBS))
-		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(GSLLIBS) $(THREADLIBS)
+		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(GSLLIBS)
 
 ifneq ($(MAKECMDGOALS),clean)
 ifneq ($(MAKECMDGOALS),clean-dep)
@@ -148,9 +146,7 @@ showbuild:
 	@echo "LOOPFUNCFLAGS      = $(LOOPFUNCFLAGS)"
 	@echo "LOOPFUNCLIBS       = $(LOOPFUNCLIBS)"
 	@echo "MODULE_LIBEXT      = $(MODULE_LIBEXT)"
-	@echo "THREADLIBS         = $(THREADLIBS)"
 	@echo ""
 	@echo "ENABLE_FFLITE      = $(ENABLE_FFLITE)"
 	@echo "ENABLE_LOOPTOOLS   = $(ENABLE_LOOPTOOLS)"
 	@echo "ENABLE_COLLIER     = $(ENABLE_COLLIER)"
-	@echo "ENABLE_THREADS     = $(ENABLE_THREADS)"
