--- a/config/Makefile.tower.in
+++ b/config/Makefile.tower.in
@@ -7,7 +7,6 @@ ABSBASEDIR      := @ABSBASEDIR@
 ENABLE_FFLITE    := @ENABLE_FFLITE@
 ENABLE_LOOPTOOLS := @ENABLE_LOOPTOOLS@
 ENABLE_COLLIER   := @ENABLE_COLLIER@
-ENABLE_THREADS   := @ENABLE_THREADS@
 
 MODULE_LIBEXT   := @MODULE_LIBEXT@
 
@@ -50,7 +49,6 @@ GSLLIBS         := @GSLLIBS@
 GSLFLAGS        := @GSLFLAGS@
 LOOPFUNCFLAGS   := @LOOPFUNCFLAGS@
 LOOPFUNCLIBS    := @LOOPFUNCLIBS@
-THREADLIBS      := @THREADLIBS@
 
 TOWER_SRC := \
 		run_tower.cpp \
@@ -101,7 +99,7 @@ $(TOWER_DEP) $(TOWER_OBJ): CPPFLAGS += $(LOOPFUNCFLAGS)
 endif
 
 $(TOWER_EXE): $(TOWER_OBJ) $(LIBMODEL1) $(LIBMODEL2) $(LIBSMHO) $(LIBFLEXI) $(filter-out -%,$(LOOPFUNCLIBS))
-		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(GSLLIBS) $(THREADLIBS)
+		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(GSLLIBS)
 
 ifneq ($(MAKECMDGOALS),clean)
 ifneq ($(MAKECMDGOALS),clean-dep)
@@ -157,9 +155,7 @@ showbuild:
 	@echo "LOOPFUNCFLAGS      = $(LOOPFUNCFLAGS)"
 	@echo "LOOPFUNCLIBS       = $(LOOPFUNCLIBS)"
 	@echo "MODULE_LIBEXT      = $(MODULE_LIBEXT)"
-	@echo "THREADLIBS         = $(THREADLIBS)"
 	@echo ""
 	@echo "ENABLE_FFLITE      = $(ENABLE_FFLITE)"
 	@echo "ENABLE_LOOPTOOLS   = $(ENABLE_LOOPTOOLS)"
 	@echo "ENABLE_COLLIER     = $(ENABLE_COLLIER)"
-	@echo "ENABLE_THREADS     = $(ENABLE_THREADS)"
