adding missing FUTILIBS variable
fixes #201

--- a/config/Makefile.customized-betas.in
+++ b/config/Makefile.customized-betas.in
@@ -42,6 +42,7 @@ CXXFLAGS_DEP_GEN:= $(CXXFLAGS)
 FC              := @FC@
 FFLAGS          := @FFLAGS@
 FLIBS           := @FLIBS@
+FUTILIBS        := @FUTILIBS@
 FOR_DEP_GEN     := $(FC)
 BOOSTFLAGS      := @BOOSTFLAGS@
 EIGENFLAGS      := @EIGENFLAGS@
