--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,13 @@ install:
   - conan remote add conan-hep https://api.bintray.com/conan/expander/conan-hep
   - conan install . --build=missing
 script:
-  - ./configure --with-cxxflags="-std=c++14 -fPIC" --with-optional-modules=test --with-addons=GM2Calc --disable-meta
+  - >
+    ./configure
+    --with-cxxflags="-std=c++14 -fPIC"
+    --with-optional-modules=test
+    --with-addons=GM2Calc
+    --with-loop-libraries=LoopTools,COLLIER
+    --disable-meta
   - make showbuild
   - make -j2
   - make -j2 -k all-test
