--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - export PATH=$(python -c 'import site; print(site.USER_BASE + "/bin")'):$PATH
   - if [[ "$TRAVIS_OS_NAME" == "osx" && "$CXX" == "g++" ]]; then export CXX="g++-9" CC="gcc-9"; fi
   - pip install --user conan
-  - conan remote add conan-hep https://api.bintray.com/conan/expander/conan-hep
+  - conan remote add conan-hep https://api.bintray.com/conan/expander/conan-hep --force
   - conan install . --build=missing
 script:
   - >
