--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
     --with-cxxflags="-std=c++14 -fPIC"
     --with-optional-modules=test
     --with-addons=GM2Calc
-    --with-loop-libraries=LoopTools,COLLIER
+    --with-loop-libraries=looptools,collier
     --disable-meta
   - make showbuild
   - make -j2
