install gfortran on travis-ci explicitly

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ compiler:
 addons:
   apt:
     packages:
+      - gfortran
       - libgsl0-dev
       - libsqlite3-dev
   homebrew:
     packages:
+      - gcc
       - gsl
       - sqlite
     update: true
