--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
     --with-cxxflags="-std=c++14 -fPIC"
     --with-optional-modules=test
     --with-addons=GM2Calc
-    --with-loop-libraries=looptools,collier
+    --with-loop-libraries=collier
     --disable-meta
   - make showbuild
   - make -j2
