avoid repeated conversion of char* to std::string

--- a/templates/run_cmd_line.cpp.in
+++ b/templates/run_cmd_line.cpp.in
@@ -32,7 +32,6 @@
 #include "physical_input.hpp"
 
 #include <iostream>
-#include <cstring>
 
 namespace flexiblesusy {
 
@@ -56,7 +55,7 @@ void set_command_line_parameters(const Dynamic_array_view<char*>& args,
                                  int& loop_library)
 {
    for (int i = 1; i < args.size(); ++i) {
-      const auto option = args[i];
+      const std::string option = args[i];
 
 @parseCmdLineOptions@
       if (Command_line_options::get_parameter_value(
@@ -67,7 +66,7 @@ void set_command_line_parameters(const Dynamic_array_view<char*>& args,
              option, "--loop-library=", loop_library))
          continue;
 
-      if (strcmp(option,"--help") == 0 || strcmp(option,"-h") == 0) {
+      if (option == "--help" == 0 || option == "-h") {
          print_usage();
          exit(EXIT_SUCCESS);
       }
