generalize fill() function to take tuple of models

--- a/templates/run_cmd_line.cpp.in
+++ b/templates/run_cmd_line.cpp.in
@@ -91,20 +91,20 @@ int run_solver(int loop_library, const @ModelName@_input_parameters& input)
    spectrum_generator.set_settings(settings);
    spectrum_generator.run(qedqcd, input);
 
-   auto model = std::get<0>(spectrum_generator.get_models_slha());
-
    @ModelName@_scales scales;
    scales.HighScale = spectrum_generator.get_high_scale();
    scales.SUSYScale = spectrum_generator.get_susy_scale();
    scales.LowScale  = spectrum_generator.get_low_scale();
    scales.pole_mass_scale = spectrum_generator.get_pole_mass_scale();
 
+   auto models = spectrum_generator.get_models_slha();
+
    const auto observables = calculate_observables(
-      model, qedqcd, physical_input, scales.pole_mass_scale);
+      std::get<0>(models), qedqcd, physical_input, scales.pole_mass_scale);
 
    // SLHA output
    @ModelName@_slha_io slha_io;
-   slha_io.fill(model, qedqcd, scales, observables);
+   slha_io.fill(models, qedqcd, scales, observables);
    slha_io.write_to_stream(std::cout);
 
    return spectrum_generator.get_exit_code();
