Switching model hierarchy (#227)
to avoid a large template class leaking into run_*.cpp files

--- a/templates/librarylink.cpp.in
+++ b/templates/librarylink.cpp.in
@@ -713,8 +713,7 @@ void put_spectrum(const standard_model::StandardModel<Solver_type>& model, MLINK
 
 /******************************************************************/
 
-template <typename Model>
-void put_spectrum(const @ModelName@_slha<Model>& model, MLINK link)
+void put_spectrum(const @ModelName@_slha& model, MLINK link)
 {
    MLPutRule(link, @ModelName@_info::model_name);
    MLPutFunction(link, "List", @numberOfSpectrumEntries@);
