--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -20,44 +20,28 @@
 #ifndef @ModelName@_SLHA_IO_H
 #define @ModelName@_SLHA_IO_H
 
-#include "@ModelName@_model_slha.hpp"
-#include "@ModelName@_info.hpp"
-#include "@ModelName@_observables.hpp"
-#include "@ModelName@_physical.hpp"
 #include "problems.hpp"
-#include "spectrum_generator_problems.hpp"
-#include "standard_model_two_scale_model.hpp"
 #include "slha_io.hpp"
-#include "ckm.hpp"
-#include "ew_input.hpp"
 #include "for_each.hpp"
-#include "lowe.h"
-#include "wrappers.hpp"
 
 #include <Eigen/Core>
 #include <string>
 #include <tuple>
-#include <utility>
-
-#define Pole(p) physical.p
-#define PHYSICAL(p) model.get_physical().p
-#define PHYSICAL_SLHA(p) model.get_physical_slha().p
-#define LOCALPHYSICAL(p) physical.p
-#define MODEL model
-#define MODELPARAMETER(p) model.get_##p()
-#define EXTRAPARAMETER(p) model.get_##p()
-#define OBSERVABLES observables
-#define LowEnergyConstant(p) Electroweak_constants::p
-#define SCALES(p) scales.p
 
 namespace flexiblesusy {
 
 struct @ModelName@_input_parameters;
 class @ModelName@_mass_eigenstates;
+struct @ModelName@_observables;
+struct @ModelName@_physical;
+class @ModelName@_slha;
+class Spectrum_generator_problems;
 class Spectrum_generator_settings;
 
-template <class T>
-class @ModelName@;
+namespace standard_model {
+class Standard_model;
+struct Standard_model_physical;
+} // namespace standard_model
 
 struct @ModelName@_scales {
    double HighScale{0.}, SUSYScale{0.}, LowScale{0.};
@@ -73,7 +57,7 @@ public:
    void fill(softsusy::QedQcd& qedqcd) const { slha_io.fill(qedqcd); }
    void fill(@ModelName@_input_parameters&) const;
    void fill(@ModelName@_mass_eigenstates&) const;
-   template <class Model> void fill(@ModelName@_slha<Model>&) const;
+   void fill(@ModelName@_slha&) const;
    void fill(Physical_input&) const;
    void fill(Spectrum_generator_settings&) const;
    double get_parameter_output_scale() const;
@@ -83,15 +67,14 @@ public:
    void read_from_stream(std::istream&);
    void set_block(const std::string& str, SLHA_io::Position position = SLHA_io::back) { slha_io.set_block(str, position); }
    void set_blocks(const std::vector<std::string>& vec, SLHA_io::Position position = SLHA_io::back) { slha_io.set_blocks(vec, position); }
-   template <class Model> void set_extra(const @ModelName@_slha<Model>&, const @ModelName@_scales&, const @ModelName@_observables&);
+   void set_extra(const @ModelName@_slha&, const @ModelName@_scales&, const @ModelName@_observables&);
    void set_input(const @ModelName@_input_parameters&);
    void set_modsel(const SLHA_io::Modsel&);
    void set_physical_input(const Physical_input&);
    void set_settings(const Spectrum_generator_settings&);
    void set_sminputs(const softsusy::QedQcd&);
    template <class... Ts> void set_spectrum(const std::tuple<Ts...>&);
-   template <class Model> void set_spectrum(const @ModelName@_slha<Model>&);
-   template <class T> void set_spectrum(const @ModelName@<T>&);
+   void set_spectrum(const @ModelName@_slha&);
    void set_spectrum(const standard_model::Standard_model&);
    void set_spinfo(const Spectrum_generator_problems&);
    void set_spinfo(const Problems&);
@@ -122,7 +105,7 @@ private:
    void set_mass(const standard_model::Standard_model_physical&);
    void set_mixing_matrices(const @ModelName@_physical&, bool);
    void set_mixing_matrices(const standard_model::Standard_model_physical&);
-   template <class Model> void set_model_parameters(const @ModelName@_slha<Model>&);
+   void set_model_parameters(const @ModelName@_slha&);
    void set_model_parameters(const standard_model::Standard_model&);
    void set_ckm(const Eigen::Matrix<std::complex<double>,3,3>&, double);
    void set_pmns(const Eigen::Matrix<std::complex<double>,3,3>&, double);
@@ -130,17 +113,6 @@ private:
    void fill_drbar_parameters(@ModelName@_mass_eigenstates&) const;
    void fill_physical(@ModelName@_physical&) const;
 };
-
-/**
- * Reads DR-bar parameters, pole masses and mixing matrices from a
- * SLHA output file.
- */
-template <class Model>
-void @ModelName@_slha_io::fill(@ModelName@_slha<Model>& model) const
-{
-   fill(static_cast<@ModelName@_mass_eigenstates&>(model));
-   fill_physical(model.get_physical_slha());
-}
 
 /**
  * Convenience wrapper function to fill all information at once
@@ -165,35 +137,6 @@ void @ModelName@_slha_io::fill(
 }
 
 /**
- * Stores the model (DR-bar) parameters in the SLHA object.
- *
- * @param model model class
- */
-template <class Model>
-void @ModelName@_slha_io::set_model_parameters(const @ModelName@_slha<Model>& model)
-{
-@writeSLHAModelParametersBlocks@
-@writeSLHAPhasesBlocks@
-}
-
-/**
- * Writes extra SLHA blocks
- *
- * @param model model class
- * @param scales struct of boundary condition scales
- * @param observables struct of observables
- */
-template <class Model>
-void @ModelName@_slha_io::set_extra(
-   const @ModelName@_slha<Model>& model, const @ModelName@_scales& scales,
-   const @ModelName@_observables& observables)
-{
-   const @ModelName@_physical physical(model.get_physical_slha());
-
-@writeExtraSLHAOutputBlock@
-}
-
-/**
  * Stores the model (DR-bar) parameters, masses and mixing matrices of
  * all given models in the SLHA object.
  *
@@ -206,52 +149,6 @@ void @ModelName@_slha_io::set_spectrum(const std::tuple<Ts...>& models)
                      [this](const auto& model) { this->set_spectrum(model); });
 }
 
-/**
- * Stores the model (DR-bar) parameters, masses and mixing matrices in
- * the SLHA object.
- *
- * @param model model class in BPMZ convention
- */
-template <class T>
-void @ModelName@_slha_io::set_spectrum(const @ModelName@<T>& model)
-{
-   set_spectrum(@ModelName@_slha<@ModelName@<T> >(model));
-}
-
-/**
- * Stores the model (DR-bar) parameters, masses and mixing matrices in
- * the SLHA object.
- *
- * @param model model class in SLHA convention
- */
-template <class Model>
-void @ModelName@_slha_io::set_spectrum(const @ModelName@_slha<Model>& model)
-{
-   const @ModelName@_physical physical(model.get_physical_slha());
-   const bool write_sm_masses = model.do_calculate_sm_pole_masses();
-
-   set_model_parameters(model);
-   set_mass(physical, write_sm_masses);
-   set_mixing_matrices(physical, write_sm_masses);
-
-   if (slha_io.get_modsel().quark_flavour_violated)
-      set_ckm(model.get_ckm_matrix(), model.get_scale());
-
-   if (slha_io.get_modsel().lepton_flavour_violated)
-      set_pmns(model.get_pmns_matrix(), model.get_scale());
-}
-
 } // namespace flexiblesusy
-
-#undef Pole
-#undef PHYSICAL
-#undef PHYSICAL_SLHA
-#undef LOCALPHYSICAL
-#undef MODEL
-#undef MODELPARAMETER
-#undef EXTRAPARAMETER
-#undef OBSERVABLES
-#undef LowEnergyConstant
-#undef SCALES
 
 #endif
