Record problems in calculation of observables (#214)
fixes #195

--- a/templates/librarylink.cpp.in
+++ b/templates/librarylink.cpp.in
@@ -29,6 +29,7 @@
 @solverIncludes@
 #include "array_view.hpp"
 #include "error.hpp"
+#include "observable_problems_format_mathlink.hpp"
 #include "physical_input.hpp"
 #include "slha_io.hpp"
 #include "spectrum_generator_settings.hpp"
@@ -446,39 +447,6 @@ void Model_data::put_input_parameters(MLINK link) const
 
 /******************************************************************/
 
-int number_of_problems(const Problems& problems)
-{
-   return problems.have_tachyon()
-      + problems.no_ewsb()
-      + (problems.no_perturbative() || problems.have_non_perturbative_parameter())
-      + problems.no_sinThetaW_convergence()
-      + problems.have_thrown()
-      + problems.have_failed_pole_mass_convergence();
-}
-
-/******************************************************************/
-
-int number_of_problems(const BVP_solver_problems& problems)
-{
-   return problems.no_convergence();
-}
-
-/******************************************************************/
-
-int number_of_warnings(const Problems& problems)
-{
-   return problems.have_bad_mass();
-}
-
-/******************************************************************/
-
-int number_of_warnings(const BVP_solver_problems&)
-{
-   return 0; // no warnings yet
-}
-
-/******************************************************************/
-
 template <typename F>
 void put_masses(MLINK link, const F& flags,
                 const std::vector<std::string>& heads = {})
@@ -558,22 +526,24 @@ void Model_data::put_problems(MLINK link) const
    const auto n_models = models.size();
    const auto solvers = problems.get_bvp_solver_problems();
    const auto n_solvers = solvers.size();
+   const auto observables = spectrum->get_observables().problems;
 
-   MLPutFunction(link, "List", n_models + n_solvers);
+   MLPutFunction(link, "List", n_models + n_solvers + 1);
 
    for (const auto& m: models) {
-      const auto np = number_of_problems(m);
       MLPutRule(link, m.get_model_name());
-      MLPutFunction(link, "List", np);
+      MLPutFunction(link, "List", m.number_of_problems());
       put_problems(link, m);
    }
 
    for (const auto& m: solvers) {
-      const auto np = number_of_problems(m);
       MLPutRule(link, m.get_solver_name());
-      MLPutFunction(link, "List", np);
+      MLPutFunction(link, "List", m.number_of_problems());
       put_problems(link, m);
    }
+
+   MLPutRule(link, "Observables");
+   mathlink_format_problems(link, observables);
 
    MLEndPacket(link);
 }
@@ -607,16 +577,14 @@ void Model_data::put_warnings(MLINK link) const
    MLPutFunction(link, "List", n_models + n_solvers);
 
    for (const auto& m: models) {
-      const auto nw = number_of_warnings(m);
       MLPutRule(link, m.get_model_name());
-      MLPutFunction(link, "List", nw);
+      MLPutFunction(link, "List", m.number_of_warnings());
       put_warnings(link, m);
    }
 
    for (const auto& m: solvers) {
-      const auto nw = number_of_warnings(m);
       MLPutRule(link, m.get_solver_name());
-      MLPutFunction(link, "List", nw);
+      MLPutFunction(link, "List", m.number_of_warnings());
       put_warnings(link, m);
    }
 
